Prevent tests from blocking for too long
Bahamut frequently gets stuck, and waiting 6h is a waste of time.

--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -445,6 +445,7 @@ jobs:
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
         bahamut
+      timeout-minutes: 30
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
@@ -483,6 +484,7 @@ jobs:
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH   make
         bahamut-anope
+      timeout-minutes: 30
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
@@ -515,6 +517,7 @@ jobs:
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
         bahamut-atheme
+      timeout-minutes: 30
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
@@ -554,6 +557,7 @@ jobs:
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/go/sbin:~/go/bin:$PATH
         make ergo
+      timeout-minutes: 30
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
@@ -592,6 +596,7 @@ jobs:
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH   make
         hybrid
+      timeout-minutes: 30
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
@@ -624,6 +629,7 @@ jobs:
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/inspircd/sbin:~/.local/inspircd/bin:$PATH
         make inspircd
+      timeout-minutes: 30
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
@@ -662,6 +668,7 @@ jobs:
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/inspircd/sbin:~/.local/inspircd/bin:$PATH  make
         inspircd-anope
+      timeout-minutes: 30
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
@@ -700,6 +707,7 @@ jobs:
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
         ircu2
+      timeout-minutes: 30
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
@@ -727,6 +735,7 @@ jobs:
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
         limnoria
+      timeout-minutes: 30
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
@@ -764,6 +773,7 @@ jobs:
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
         nefarious
+      timeout-minutes: 30
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
@@ -796,6 +806,7 @@ jobs:
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local//sbin:~/.local//bin:$PATH
         make ngircd
+      timeout-minutes: 30
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
@@ -834,6 +845,7 @@ jobs:
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local//sbin:~/.local//bin:$PATH  make
         ngircd-anope
+      timeout-minutes: 30
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
@@ -866,6 +878,7 @@ jobs:
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local//sbin:~/.local//bin:$PATH
         make ngircd-atheme
+      timeout-minutes: 30
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
@@ -904,6 +917,7 @@ jobs:
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH   make
         plexus4
+      timeout-minutes: 30
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
@@ -936,6 +950,7 @@ jobs:
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
         solanum
+      timeout-minutes: 30
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
@@ -962,6 +977,7 @@ jobs:
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
         sopel
+      timeout-minutes: 30
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
@@ -994,6 +1010,7 @@ jobs:
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/sbin:~/.local/unrealircd/bin:$PATH
         make unrealircd
+      timeout-minutes: 30
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
@@ -1026,6 +1043,7 @@ jobs:
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/sbin:~/.local/unrealircd/bin:$PATH
         make unrealircd-5
+      timeout-minutes: 30
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
@@ -1064,6 +1082,7 @@ jobs:
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/sbin:~/.local/unrealircd/bin:$PATH  make
         unrealircd-anope
+      timeout-minutes: 30
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
@@ -1096,6 +1115,7 @@ jobs:
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH=~/.local/unrealircd/sbin:~/.local/unrealircd/bin:$PATH
         make unrealircd-atheme
+      timeout-minutes: 30
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
