--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -67,6 +67,7 @@ jobs:
       run: |
         cd $GITHUB_WORKSPACE/Bahamut/
         patch src/s_user.c < $GITHUB_WORKSPACE/patches/bahamut_localhost.patch
+        patch src/s_bsd.c < $GITHUB_WORKSPACE/patches/bahamut_mainloop.patch
         echo "#undef THROTTLE_ENABLE" >> include/config.h
         libtoolize --force
         aclocal
