silence wget + use pifpaf to run mysql for Dlk

--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -464,8 +464,9 @@ jobs:
         repository: DalekIRC/Dalek-Services
     - name: Build Dlk
       run: |
-        wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
-        wget https://wordpress.org/latest.zip -O wordpress-latest.zip
+        pip install pifpaf
+        wget -q https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
+        wget -q https://wordpress.org/latest.zip -O wordpress-latest.zip
     - name: Install system dependencies
       run: sudo apt-get install atheme-services faketime
     - name: Install irctest dependencies
