--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -460,7 +460,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         path: Dlk-Services
-        ref: 9e7820f76756d97db7400d0c4c223699d5b689b1
+        ref: master
         repository: DalekIRC/Dalek-Services
     - name: Build Dlk
       run: |
