--- a/workflows.yml
+++ b/workflows.yml
@@ -328,10 +328,10 @@ software:
         separate_build_job: false
         path: Dlk-Services
         refs:
-            stable: "9e7820f76756d97db7400d0c4c223699d5b689b1"
-            release: "9e7820f76756d97db7400d0c4c223699d5b689b1"
-            devel: "9e7820f76756d97db7400d0c4c223699d5b689b1"
-            devel_release: "9e7820f76756d97db7400d0c4c223699d5b689b1"
+            stable: "c4cf84ee04af4b9fb78544f61593104d94eb69c3"
+            release: "c4cf84ee04af4b9fb78544f61593104d94eb69c3"
+            devel: "master"
+            devel_release: "c4cf84ee04af4b9fb78544f61593104d94eb69c3"
         build_script: |
             pip install pifpaf
             wget -q https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
