Revert "Bump Dlk version"
This reverts commit 5bec1f833ef526cb0da1c9c2f6e5cef4ba84a11a.

--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -98,7 +98,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         path: Dlk-Services
-        ref: main
+        ref: master
         repository: DalekIRC/Dalek-Services
     - name: Build Dlk
       run: |
