--- a/workflows.yml
+++ b/workflows.yml
@@ -39,9 +39,9 @@ software:
         separate_build_job: false
         path: Dlk-Services
         refs:
-            stable: &dlk_stable "a515c65273d5c470a2605e884dc6ac07ec293178"
+            stable: &dlk_stable "8868473ad1ee03c56aac1e6a7f85ed11b8cb2ef7"
             release: *dlk_stable
-            devel: "main"
+            devel: "master"
             devel_release: *dlk_stable
         build_script: |
             pip install pifpaf
