--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -98,13 +98,12 @@ jobs:
       uses: actions/checkout@v2
       with:
         path: Dlk-Services
-        ref: master
+        ref: main
         repository: DalekIRC/Dalek-Services
     - name: Build Dlk
-      run: |
-        pip install pifpaf
-        wget -q https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
-        wget -q https://wordpress.org/latest.zip -O wordpress-latest.zip
+      run: "sed -i \"s/^\\s+function is_autoop/\tstatic function is_autoop/\" $GITHUB_WORKSPACE/Dlk-Services/src/modules/ChanServ/cs_autoop.php\n\
+        pip install pifpaf\nwget -q https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar\n\
+        wget -q https://wordpress.org/latest.zip -O wordpress-latest.zip\n"
     - name: Install system dependencies
       run: sudo apt-get install atheme-services faketime
     - name: Install irctest dependencies
