--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -101,10 +101,9 @@ jobs:
         ref: 8868473ad1ee03c56aac1e6a7f85ed11b8cb2ef7
         repository: DalekIRC/Dalek-Services
     - name: Build Dlk
-      run: |
-        pip install pifpaf
-        wget -q https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
-        wget -q https://wordpress.org/latest.zip -O wordpress-latest.zip
+      run: "sed -i \"s/^\\s+function is_autoop/\tstatic function is_autoop/\" $GITHUB_WORKSPACE/Dlk-Services/src/modules/ChanServ/cs_autoop.php\n\
+        pip install pifpaf\nwget -q https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar\n\
+        wget -q https://wordpress.org/latest.zip -O wordpress-latest.zip\n"
     - name: Install system dependencies
       run: sudo apt-get install atheme-services faketime
     - name: Install irctest dependencies
