--- a/pytest.ini
+++ b/pytest.ini
@@ -18,16 +18,19 @@ markers =
     private_chathistory
 
     # capabilities
+    account-notify
     account-tag
     away-notify
     batch
     echo-message
     extended-join
+    extended-monitor
     labeled-response
     message-tags
     draft/multiline
     multi-prefix
     server-time
+    setname
     sts
 
     # isupport tokens
