--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -1307,12 +1307,13 @@ jobs:
       uses: actions/checkout@v2
       with:
         path: Dlk-Services
-        ref: a515c65273d5c470a2605e884dc6ac07ec293178
+        ref: c3fcc59bf37aa2ca5d0414557c5e0b4354cc18ba
         repository: DalekIRC/Dalek-Services
     - name: Build Dlk
-      run: "sed -i \"s/^\\s+function is_autoop/\tstatic function is_autoop/\" $GITHUB_WORKSPACE/Dlk-Services/src/modules/ChanServ/cs_autoop.php\n\
-        pip install pifpaf\nwget -q https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar\n\
-        wget -q https://wordpress.org/latest.zip -O wordpress-latest.zip\n"
+      run: |
+        pip install pifpaf
+        wget -q https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
+        wget -q https://wordpress.org/latest.zip -O wordpress-latest.zip
     - name: Install system dependencies
       run: sudo apt-get install atheme-services faketime
     - name: Install irctest dependencies
